# adpa

./: .gitignore  ARCHITECTURE.md  DATA_SOURCES.md  README.md  TESTING.md
backend/: .coverage  .env.example  Dockerfile  Dockerfile.dev  alembic.ini  compose.yaml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_extraction_normalization_results.py  0003_add_analysis_results.py  0004_add_historical_conversations.py  0005_add_missing_columns.py
backend/app/: config.py  main.py  pyproject.toml
backend/app/agents/: analysis.py  coordinator.py  coordinator_graph.py  coordinator_nodes.py  coordinator_state.py  extraction.py  normalization.py
backend/app/db/: database.py  models.py
backend/app/mock_data/: ResidentWorkingPersonsAged15YearsandOverbyUsualModeofTransporttoWorkAgeGroupandSexCensusofPopulation2010.csv  ResidentWorkingPersonsAged15YearsandOverbyUsualModeofTransporttoWorkAgeGroupandSexGeneralHouseholdSurvey2005.csv  data.json
backend/app/repositories/: pipeline.py
backend/app/router/: query.py
backend/app/schemas/: query.py
backend/app/services/: llm.py  pipeline.py  query.py
backend/evals/: __init__.py  eval_analysis_agent.py  eval_intent_agent.py
backend/tests/: conftest.py  test_analysis.py  test_coordinator.py  test_coordinator_graph.py  test_coordinator_graph_agents.py  test_coordinator_graph_integration.py  test_coordinator_graph_nodes.py  test_extraction.py  test_llm_service.py  test_normalization.py  test_pipeline_repository.py  test_query_service.py  test_router.py
frontend/: .cta.json  (+6 more)
(+34 files in other folders)
