[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "logfire[fastapi,sqlalchemy]>=4.25.0",
    "opentelemetry-instrumentation-google-genai>=0.7b0",
    "pydantic-ai>=1.64.0",
    "pydantic-evals>=1.64.0",
    "pytest>=9.0.2",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "aiosqlite>=0.19",
    "greenlet>=3.3.2",
    "pytest-cov>=7.0.0",
    "coverage>=7.13.4",
    "pandas>=3.0.1",
    "duckdb>=1.4.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pydantic-evals>=1.0.0",
]
